plugins {
    id 'java'
}

group 'JavaMigrationR12'
version '1.0-SNAPSHOT'

sourceCompatibility = 13
targetCompatibility=13

repositories {
    mavenCentral()
}

// switch preview
tasks.withType(JavaCompile) {
    options.compilerArgs += ["--enable-preview"]
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
